Implemented endpoint for service info
